# base32768-rs

./: Cargo.toml
benches/: lib.rs
examples/js-bench/: Cargo.toml  EncoderDecoderTogether.src.js  bench-runner.js
examples/js-bench/src/: lib.rs
src/: alternative.rs  bits_to_bits.rs  data.rs  errors.rs  lib.rs
src/optimized/: decoder_impl.rs  encoder_impl.rs  mod.rs
src/pipebuf/: mod.rs
tests/: lib.rs
