[package]
name = "base32768"
version = "0.1.0"
authors = ["Dreae <dreae@dreae.onl>"]
description = "Encodes binary data to UTF-16 text"
homepage = "https://github.com/Dreae/base32768-rs"
repository = "https://github.com/Dreae/base32768-rs"
readme = "README.md"
license = "MIT"
categories = ["encoding"]
edition = '2021'

[dependencies]
lazy_static = "1.4.0"
rand = { version = "0.8.5", features = ["small_rng"] }
getrandom = {version = "0.2.11", features = ["js"]}
arrayvec = "0.7.4"
itertools = "0.12.0"
js-sys = "0.3.66"
wasm-bindgen = { version = "0.2.92", features = ["enable-interning", "serde"] }
web-sys = { version = "0.3.66", features = ["console"] }
pipebuf = { version = "0.2.1", git = "https://github.com/khoover/pipebuf", branch = "generic" }

[dev-dependencies]
glob = "0.3.1"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.bench]
lto = true
codegen-units = 1
strip = true
opt-level = 3
