[package]
name = "js-bench"
version = "0.1.0"
authors = ["Dreae <dreae@dreae.onl>"]
description = "Encodes binary data to UTF-16 text"
homepage = "https://github.com/Dreae/base32768-rs"
repository = "https://github.com/Dreae/base32768-rs"
readme = "README.md"
license = "MIT"
categories = ["encoding"]
edition = '2021'

[lib]
crate-type = ["cdylib"]

[dependencies]
base32768 = { path = "../.." }
js-sys = "0.3.66"
talc = { version = "4.0.0", default-features = false, features = ["lock_api"] }
wasm-bindgen = { version = "0.2.89", features = ["enable-interning", "serde"] }
web-sys = { version = "0.3.66", features = ["console"] }
pipebuf = { version = "0.2.1", git = "https://github.com/khoover/pipebuf", branch = "generic" }

[dev-dependencies]
glob = "0.3.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3","-c","--signext-lowering"]
